# sqlite-study

API测试/SQLite_C_API/分步查询/libunencapsulated/: Makefile  libunencapsulated.cpp  libunencapsulated.h
API测试/SQLite_C_API/分步查询/libunencapsulated/test/: Makefile  mydb.db  test-unencapsulated  test-unencapsulated.cpp
API测试/SQLite_C_API/封装查询/sqlite3_exec/: README  mydb  mydb.c  mydb.db
API测试/SQLite_C_API/性能测试/删除/delete_test/: delete_test  delete_test.cpp  delete_test_mem  delete_test_mem.cpp  delete_test_mem.txt  makefile
API测试/SQLite_C_API/性能测试/插入/insert_test/: insert_test  insert_test.cpp  insert_test_mem  insert_test_mem.cpp  makefile  mydb.db-journal
API测试/SQLite_C_API/性能测试/查询/query_test/: makefile  query_test  query_test.cpp  query_test_mem  query_test_mem.cpp
API测试/SQLite_C_API/性能测试/递归/iter_test/: iter_test  iter_test.cpp  iter_test_mem  iter_test_mem.cpp  makefile
API测试/SQLite_C_API/模式配置/临时数据库/: 要求.txt
API测试/SQLite_C_API/模式配置/临时数据库/templib/: Makefile  mytemp  mytemp.cpp  mytemp.h  mytemp.txt
API测试/SQLite_C_API/绑定查询/multi_operation/: makefile  multi_operation  multi_operation.cpp
doc/: 1.SQLite安装与基本使用.docx  2.SQLite对SQL的支持.docx  2.嵌入式数据库横向性能对比测试.docx  2012年中数通信息有限公司应届毕业生培训_嵌入式数据库研究报告.docx  3.SQLite时间性能测试报告.docx  4.SQLite工作方式.docx  七类临时文件.docx
visio配图/: 3kinds_of_databases.vsd  SQLite_C_C++_Use.vsd  SQLite_C_C++_Use_Multi.vsd  SQLite_C_C++_Use_Multi_Slow.vsd  SQLite_C_C++_Use_Wrap.vsd  SQLite_C_C++_Use_memfile.vsd  access.vsd  affinity.vsd  android_protocol_stack.vsd  backup.vsd  bak.vsd  class_db_file.vsd  class_db_mem.vsd  class_struct.vsd  config_mode.vsd  kvdb.vsd  lock.vsd  lock_status.vsd  no_cs.vsd  rdb.vsd  read.vsd  reserved2exclusive.vsd  shared2reserved.vsd  sqlite_clp.vsd  sqlite_clp_help.vsd  sqlite_in_enc.vsd  type.vsd  unlocked2shared.vsd  user.vsd  事务.vsd
参考文献/: SQLite中文指南.docx  SQLite入门1 - 终端命令.docx  SQLite入门2 - 建表修改删除.docx  SQLite入门3 - 约束.docx  SQLite接口编程.docx  WINNERS_embedded_database+LAST+BETA+RELEASE.cpp  sqlite安装使用和性能优化及设置.txt  sqlite应用场景.docx  《SQLite权威指南》（部分）.htm  嵌入式数据库_百度百科.htm  文件格式分析_v101.doc
嵌入ENC框架研究/: PRAGMA.docx  SQLite嵌入ENC框架设计报告.doc  reference.docx
嵌入ENC框架研究/sldb_0_0_1/: 性能测试.xlsx
嵌入ENC框架研究/sldb_0_0_1/lib/: base.cpp  base.h  base.hpp  common.hpp  date_time.hpp  dir.hpp  sldb.cpp  sldb.h  slfdb_shell.cpp  slfdb_shell.h  slfstr_shell.hpp  slhdb.h  slmdb_shell.cpp  slmdb_shell.h  slmstr_shell.hpp  typedef.hpp
嵌入ENC框架研究/sldb_0_0_1/lib/performance/: performance.cpp
嵌入ENC框架研究/sldb_0_0_1/lib/test/: CMakeLists.txt  test-base.cpp  test-dir.cpp  test-sldb.cpp  test-slhdb.cpp
嵌入ENC框架研究/sldb_0_0_2/: 性能测试_sldb_0_0_2.xlsx
嵌入ENC框架研究/sldb_0_0_2/lib/: CMakeLists.txt  base.hpp  slfdb_shell.cpp  slfdb_shell.h  slfstr_shell.hpp  slhdb.cpp  slmdb_shell.cpp  slmdb_shell.h  slmstr_shell.hpp
嵌入ENC框架研究/sldb_0_0_2/lib/performance/: CMakeLists.txt  performance.cpp
嵌入ENC框架研究/sldb_0_0_2/lib/test/: test-slfdb_shell.cpp  test-slhdb.cpp  test-slmdb_shell.cpp
纵向性能比较画图/: delete_file.m  delete_mem.m  insert_file.m  insert_mem.m  iter_file.m  iter_mem.m
(+6 files in other folders)
